src/objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CF_ContactCount__c</fullName>
        <label>No Of Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Group_ID__c</fullName>
        <externalId>true</externalId>
        <label>VIEWS Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Group_Name__c</fullName>
        <description>This is the Formal field for the text field</description>
        <formula>LEFT(Name,40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Queue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Mail_Code__c</fullName>
        <description>This field is used to generate a FOM</description>
        <inlineHelpText>This is the code assigned to VA Organizations for routing mail.</inlineHelpText>
        <label>Mail Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Nested_Group_ID__c</fullName>
        <externalId>true</externalId>
        <label>VIEWS Nested Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Office_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box to mark the office as inactive</description>
        <label>Office Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Queue_ID__c</fullName>
        <externalId>true</externalId>
        <label>VIEWS Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_VIEWS_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to generate a FOM</description>
        <label>VIEWS Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VA_Organization_Acronym__c</fullName>
        <description>This field is a picklist field that contains the 17 organization acronyms for the VA.  This field is visible and newer than the original that persists off the page layout, but is updated by this picklist field by workflow so it can continue to be used for referenced flows, code and processes.</description>
        <inlineHelpText>The acronym of the VA Organization that is related to this record&apos;s Account name. 
(E.g. OSVA-00 Office of the Secretary&apos;s VA organization acronym is OSVA.)</inlineHelpText>
        <label>VA Organization Acronym</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BVA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>NCA</fullName>
                </value>
                <value>
                    <fullName>OALC</fullName>
                </value>
                <value>
                    <fullName>OAWP</fullName>
                </value>
                <value>
                    <fullName>OCLA</fullName>
                </value>
                <value>
                    <fullName>OEI</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OI&amp;T</fullName>
                    <label>OIT</label>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>OPIA</fullName>
                </value>
                <value>
                    <fullName>OSP</fullName>
                </value>
                <value>
                    <fullName>OSVA</fullName>
                </value>
                <value>
                    <fullName>VBA</fullName>
                </value>
                <value>
                    <fullName>VEO</fullName>
                </value>
                <value>
                    <fullName>VHA</fullName>
                </value>
                <value>
                    <fullName>GAL</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIEWS_SpringCM_Group_Href__c</fullName>
        <description>Href of the SpringCM Group associated to thi account</description>
        <externalId>true</externalId>
        <label>VIEWS SpringCM Group Href</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>